# KIRO_GITTE

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  ADMIN_INTERFACE_IMPLEMENTATION_SUMMARY.md  BUILD_TEST_IMPLEMENTATION_SUMMARY.md  CHECKBOX_RENDERING_FIX.md  CODE_QUALITY_REPORT.md  CONSENT_ENUM_FIXES_SUMMARY.md  CONSENT_FIXES_QUICK_REFERENCE.md  CONSENT_FORM_BUTTON_FIX.md  CONSENT_WRITE_PATH_FIXES_SUMMARY.md  CONSENT_WRITE_PATH_IMPLEMENTATION_SUMMARY.md  Dockerfile  Dockerfile.prod  ERROR_HANDLING_IMPLEMENTATION_SUMMARY.md  FINAL_INTEGRATION_SUMMARY.md  FINAL_INTEGRATION_VALIDATION_SUMMARY.md  FINAL_REVIEW_SUMMARY.md  FINAL_VALIDATION_SUMMARY.md  FLOW_B_IMPLEMENTATION_SUMMARY.md  GETTING_STARTED_GITTE.md  IMPACT_MATRIX_AND_ROLLBACK.md  IMPORT_ERROR_FIX_SUMMARY.md  INTRO_CHAT_STEP_SUMMARY.md  INVESTIGATION_CONSENT_FEATURE.md  MOCK_REMOVAL_COMPLETION_SUMMARY.md  Makefile  ONBOARDING_IMPLEMENTATION_SUMMARY.md  PALD_BOUNDARY_FINAL_SUMMARY.md  PATCH_MANUAL.rej  PROJECT_COMPLETION_SUMMARY.md  PSEUDONYM_FLOW_FINAL_FIXES_SUMMARY.md  README.md  SECURITY_ERROR_HANDLING_SUMMARY.md  SYSTEM_INTEGRATION_VALIDATION_REPORT.md  TASK_18_COMPLETION_SUMMARY.md  TASK_18_IMPLEMENTATION_SUMMARY.md  WINDOWS_RUNBOOK.md  _dsn_check.py  (+29 more)
Basic files/: pald_schema.json  pald_schema_V0.json
ExecDoku/: Cheatsheet.docx  ChecklisteVibePatchETC.docx  ERweiterungen.docx  Execute Final check.docx  Execute Task 1.docx  Execute Task 10 11.docx  Execute Task 12_14.docx  Execute Task 15_16.docx  Execute Task 17_18.docx  Execute Task 19_20.docx  Execute Task 2.docx  Execute Task 3.docx  (+14 more)
(+428 files in other folders)
